# TreeSitterPlusPlus

./: CMakeLists.txt
.github/workflows/: unittest.yml
include/tree_sitter/cxx/: node.h
src/: lang.cpp  node.cpp
tests/: test_parser.cpp  test_query.cpp
